--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 3em;
-    font-family: Arial, Helvetica, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 table {
@@ -18,6 +18,16 @@ td {
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+#buscador {
+    background: url(https://cdn0.iconfinder.com/data/icons/slim-square-icons-basics/100/basics-19-32.png) no-repeat 0px 5px;
+    background-size: 24px;
+    width: 500px;
+    border: transparent;
+    padding: 10px 10px 10px 30px;
+    outline: none;
+    margin-bottom: 10px;
 }
 
 .spinnerContainer {
