--- a/style.css
+++ b/style.css
@@ -107,4 +107,8 @@ tr:nth-child(even) {
     td:nth-of-type(2):before {
         content: "Cantidad";
     }
+
+    td:nth-of-type(3):before {
+        content: "Plataforma";
+    }
 }
