--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ tr:nth-child(even) {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100dvh;
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     justify-content: center;
