--- a/style.css
+++ b/style.css
@@ -111,4 +111,8 @@ tr:nth-child(even) {
     td:nth-of-type(3):before {
         content: "Plataforma";
     }
+
+    #buscador {
+        width: 200px;
+    }
 }
